Improved snapping support. Disabling snapping now disables jQuery draggable snapping tollerance as well (the timeline edges). Snapping better aligns with clip sizes on the screen... missing transitions have also been fixed to not create tiny overlaps.

--- a/src/timeline/media/css/main.css
+++ b/src/timeline/media/css/main.css
@@ -56,12 +56,12 @@ img {
 .clip_effects { cursor: pointer; border:1px solid #000; text-align:center; min-width:20px; font-size:14px; padding:1px; font-weight:bold; float:left; margin-left:2px; margin-right:2px; margin-top:2px; background: rgba(54, 25, 25, .2); overflow:hidden;line-height:15px;height:15px;border-top-left-radius: 6px; border-bottom-left-radius: 6px;border-top-right-radius: 6px; border-bottom-right-radius: 6px;}
 .effect_icon {margin-left:1px;margin-right:1px;}
 
-.clip { cursor: move; z-index:5000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #ef7f00; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(82,82,82,1)), color-stop(100%,rgba(34,38,40,1))); border-radius: 8px; border: 1px solid #4b92ad; border-left: 2px solid #4b92ad; border-right: 2px solid #4b92ad; box-shadow: 0px 0px 10px #000; opacity: 0.95;}
+.clip { cursor: move; z-index:5000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #ef7f00; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(82,82,82,1)), color-stop(100%,rgba(34,38,40,1))); border-radius: 8px; border: 1px solid #4b92ad; border-left: 2px solid #4b92ad; border-right: 2px solid #4b92ad; box-shadow: 0px 0px 10px #000; opacity: 0.95; box-sizing: border-box;}
 .left_edge_stop { border-left: 2px solid #4b92ad; }
 .right_edge_stop { border-right: 2px solid #4b92ad; }
 .highlight_clip { border-color: #32b7ea; }
-.ui-selecting { border-left: 2px solid yellow!important; border-right: 2px solid yellow!important; }
-.ui-selected { border-left: 2px solid red!important; border-right: 2px solid red!important; }
+.ui-selecting { border-left: 2px solid yellow!important; border-right: 2px solid yellow!important; box-sizing: border-box; }
+.ui-selected { border-left: 2px solid red!important; border-right: 2px solid red!important; box-sizing: border-box; }
 .thumb {margin-left:10px; width: 66px; height: 46px;}
 .thumb-start { float:left; }
 .thumb-end {float:right; }
@@ -87,7 +87,7 @@ img {
 
 /* Transitions */
 .transition_top { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.75)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; }
-.transition { cursor: move; z-index:8000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #0192c; background: -webkit-linear-gradient(top, #0192c1 0%,#3fa1bf 100%); border-radius: 8px; border: 1px solid #0192c1; border-left: 2px solid #0192c1; border-right: 2px solid #0192c1; background-image: url(../images/transition.png); background-repeat: no-repeat; background-position: center; background-size: 100% 66px; opacity:0.75; box-shadow: 0px 0px 10px #000; }
+.transition { cursor: move; z-index:8000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #0192c; background: -webkit-linear-gradient(top, #0192c1 0%,#3fa1bf 100%); border-radius: 8px; border: 1px solid #0192c1; border-left: 2px solid #0192c1; border-right: 2px solid #0192c1; background-image: url(../images/transition.png); background-repeat: no-repeat; background-position: center; background-size: 100% 66px; opacity:0.75; box-shadow: 0px 0px 10px #000; box-sizing: border-box; }
 .transition_menu { cursor: pointer; float:left;margin-top:4px;margin-left:4px;margin-right:4px;width:12px;height:12px;background-image: url(../images/menu.png);}
 .transition_label { float:left; padding-top: 2px; width:50px; margin-left: 2px; color:#fff;font-weight:bold;}
 .highlight_transition { border-color: #32b7ea; }
